gnome-settings-daemon (3.4.0-0ubuntu2) UNRELEASED; urgency=low

  * debian/patches/16_use_synchronous_notifications.patch: Fix invalid cast
    causing segfault when using keyboard backlight keys. (LP: #959874)

 -- Iain Lane <laney@ubuntu.com>  Wed, 28 Mar 2012 00:02:15 +0100

gnome-settings-daemon (3.4.0-0ubuntu1) precise-proposed; urgency=low

  * New upstream release:
    - Wacom:
      Check if the "last-stylus" property has been set
    - updated translations

 -- Didier Roche <didrocks@ubuntu.com>  Tue, 27 Mar 2012 10:50:10 +0200

gnome-settings-daemon (3.3.92-0ubuntu2) precise; urgency=low

  * 51_lock_screen_on_suspend.patch: when closing the lid, only lock the
    screen at this step if we're not going to suspend or hibernate.

 -- Marc Deslauriers <marc.deslauriers@ubuntu.com>  Tue, 20 Mar 2012 08:39:38 -0400

gnome-settings-daemon (3.3.92-0ubuntu1) precise; urgency=low

  [ Sebastien Bacher ]
  * New upstream version, should fix
    - "Option to "Lock screen afer screen turns off" is ignored"
      (lp: #959184)
    - "color-plugin-WARNING **: failed to get edid: unable to get 
       EDID for output" (lp: #863359)
  * Dropped patches included in the new version
  * Refreshed the other patches

  [ Marc Deslauriers ]
    - 51_lock_screen_on_suspend.patch: refreshed for 3.3.92.

 -- Sebastien Bacher <seb128@ubuntu.com>  Mon, 19 Mar 2012 18:57:50 +0100

gnome-settings-daemon (3.3.91-0ubuntu6) precise; urgency=low

  * debian/patches/61_unity_use_application_indicator.patch:
    - update to fix issues where the keyboard indicator would not update
      or reflect the correct layout when changing layout with the keyboard, 
      thanks Charles Kerr (lp: #885730)

 -- Sebastien Bacher <seb128@ubuntu.com>  Fri, 16 Mar 2012 11:10:43 +0100

gnome-settings-daemon (3.3.91-0ubuntu5) precise; urgency=low

  * debian/patches/52_sync_background_to_accountsservice.patch:
    - don't trigger a warning when using a solid color (lp: #954590)