@@ -939,15 +939,15 @@ Index: gnome-settings-daemon-3.3.91/plugins/keyboard/gsd-keyboard-xkb.c
 +        gtk_menu_shell_append(GTK_MENU_SHELL (popup_menu), item);
 +
 +	item =
-+	    gtk_menu_item_new_with_mnemonic (_("Keyboard _Preferences"));
++	    gtk_menu_item_new_with_mnemonic (_("Show _Layout Chart"));
 +	gtk_widget_show (item);
-+	g_signal_connect (item, "activate", popup_menu_launch_capplet,
++	g_signal_connect (item, "activate", popup_menu_show_layout,
 +			  NULL);
 +	gtk_menu_shell_append (GTK_MENU_SHELL (popup_menu), item);
 +
-+	item = gtk_menu_item_new_with_mnemonic (_("Show Current _Layout"));
++	item = gtk_menu_item_new_with_mnemonic (_("Keyboard Layout _Settings..."));
 +	gtk_widget_show (item);
-+	g_signal_connect (item, "activate", popup_menu_show_layout, NULL);
++	g_signal_connect (item, "activate", popup_menu_launch_capplet, NULL);
 +	gtk_menu_shell_append (GTK_MENU_SHELL (popup_menu), item);
 +#endif
 +
